# pm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DELIVERABLES_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  GEMINI_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE2_PHASE3_RESULTS.md  README.md  SUBMIT_NOW.md  TEST_RESULTS.md  VERCEL_EMAIL_CUSTOMIZATION.md  mlflow.db  pyproject.toml  requirements.txt  settings.json
.claude/: settings.json
agents/: implementer.md  opus-pipeline-architect.md  reviewer.md  team-lead.md  tester.md
contributing-blueprint/: 001-init-context-update-team-agents.md  002-init-context-update-merkle-trees.md
docs/: AGENT_EXPANSION_GUIDE.md  ENV_SETUP_GUIDE.md  GEMINI_KIMI_INTEGRATION.md  GOOGLE_GROUPS_SECURITY_COMPARISON.md  GOOGLE_WORKSPACE_SETUP.md  ROADMAP.md  STARTUP_CREDITS_TRACKER.md  git-safety-guardrails.md
experiments/: phase2_phase3_results.json  test_all.py  test_all_phases.py  test_setup.py
hooks/: pre-commit-check.sh  test-on-edit.sh
issues/: modular-infrastructure-proposal.md
lib/: __init__.py  agent_registry.py  mlflow_tracing.py
pm/: .commitlintrc.json  .gitattributes  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DASHBOARD.html  DASHBOARD.json  ENTRYPOINT.md  Makefile  README.md  architecture.json
research/: integration-research-opus46-crawler-pipeline.md  neon-crawler-pipeline-architecture.json
reviews/: review.schema.md
scripts/: .gitignore  GEMINI_EMAIL_DRAFTER_README.md  QUICKSTART_GOOGLE_GROUPS.md  README.md  init-project.sh  (+10 more)
teams/meta-ads-sync/: .gitignore  CLAUDE.md  env.template  pyproject.toml  sync-ads.sh
teams/meta-ads-sync/agents/: meta-ads-sync-engineer.md  meta-ads-sync-lead.md
teams/meta-ads-sync/lib/: __init__.py  cli.py  get_env.py  meta_client.py  orchestrator.py  sheets_client.py
teams/meta-ads-sync/tests/: __init__.py  conftest.py  test_meta_client.py  test_orchestrator.py  test_sheets_client.py
(+220 files in other folders)
